--- a/src/public/static/fragments/header.html
+++ b/src/public/static/fragments/header.html
@@ -1,6 +1,7 @@
+<figure class="avatar avatar-x">
+  <img src="/src/public/static/imgs/logo_.png" alt="...">
+</figure>
 <div class="chip">
-  <figure class="avatar avatar-xl" data-initial="ma" style="background-color: #5755d9;"></figure>
-
-  Manuel Alfredo
+  alfa48
   <a href="#" class="btn btn-clear" aria-label="Close" role="button"></a>
 </div>
