--- a/src/public/static/fragments/header.html
+++ b/src/public/static/fragments/header.html
@@ -1,5 +1,5 @@
 <figure class="avatar avatar-x">
-  <img src="/src/public/static/imgs/logo_.png" alt="...">
+  <img src="./src/public/static/imgs/logo_.png" type="image/png" alt="...">
 </figure>
 <div class="chip">
   alfa48
